--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -9,6 +9,6 @@
 
 .header-nav {
     @include centeredFlex(flex, center, space-between);
-    width: 100%;
+    width: 100vw;
     min-height: 60px;
 }
