--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -16,10 +16,11 @@
 
 .menu-button__icon-cross {
     display: none;
+    background-color: transparent;
+    
 
     .menu-button.is-open & {
         display: block;
-        fill: var(--black-color);
     }
 }
 
@@ -28,20 +29,17 @@
 }
 
 .menu-container {
-    background-color: var(--white-color);
     padding: 48px 40px;
+    background-color: var(--white-color);
     @include font(null, 500, 40px, 1.18, 0.02em);
-    transform: translateY(-60px);
-
-    transition: transform 250ms var(--timing-function);
 
     @media screen and (max-width: 767px) {
         display: none;
         position: absolute;
-        top: 100%;
+        top: 0;
         left: 0;
         width: 100%;
-        height: 769px;
+        min-height: 769px;
 
         &.is-open {
             display: block;
