Выполняет адаптивную вёрстку

--- a/sass/layout/_site-nav.scss
+++ b/sass/layout/_site-nav.scss
@@ -4,17 +4,11 @@
     }
 } 
 
-.site-nav___item {
-    margin-bottom: 32px;
-}
-
-
 /*.site-nav__item:not(:first-child) {
     margin-left: 50px;
-}
+}*/
 
 .site-nav__link {
-    display: block;
     padding-top: 32px;
     padding-bottom: 32px;
 
