--- a/css/main.css
+++ b/css/main.css
@@ -164,6 +164,7 @@ body.modal-open {
   padding: 0;
   border: none;
   background-color: transparent;
+  z-index: 1;
 }
 
 .menu-button:hover, .menu-button:focus {
@@ -178,10 +179,13 @@ body.modal-open {
 
 .menu-button__icon-cross {
   display: none;
-  background-color: transparent;
 }
 
 .menu-button.is-open .menu-button__icon-cross {
+  display: block;
+}
+
+.menu-container.is-open .menu-button__icon-cross {
   display: block;
 }
 
@@ -192,10 +196,6 @@ body.modal-open {
 .menu-container {
   padding: 48px 40px;
   background-color: var(--white-color);
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.18;
-  letter-spacing: 0.02em;
 }
 
 @media screen and (max-width: 767px) {
@@ -204,8 +204,8 @@ body.modal-open {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    min-height: 769px;
+    width: 100vw;
+    min-height: 100vh;
   }
   .menu-container.is-open {
     display: block;
@@ -220,6 +220,10 @@ body.modal-open {
   }
 }
 
+.site-nav {
+  margin-bottom: 302px;
+}
+
 @media screen and (min-width: 768px) {
   .site-nav {
     display: flex;
@@ -229,78 +233,135 @@ body.modal-open {
 
 /*.site-nav__item:not(:first-child) {
     margin-left: 50px;
+}*/
+.site-nav__item:not(:last-child) {
+  margin-bottom: 32px;
 }
 
 .site-nav__link {
-    padding-top: 32px;
-    padding-bottom: 32px;
+  display: inline-block;
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+}
 
-    color: var(--title-text-color);
+@media screen and (min-width: 768px) {
+  .site-nav__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    transition: color 250ms var(--timing-function);
+  }
+}
 
-    @include tab {
-        @include font(null, 500, 14px, 1.14, 0.02em);
-
-        transition: color 250ms var(--timing-function);
-    }
-
-    &:hover, &:focus {
-        color: var(--accent-color);
-    }
+.site-nav__link:hover, .site-nav__link:focus {
+  color: var(--accent-color);
 }
 
 .site-nav__link--current {
-    position: relative;
-    color: var(--accent-color);
-
-    @include tab {
-    &::after {
-        content: '';
-        position: absolute;
-        left: 0;
-        bottom: -1px;
-
-        width: 100%;
-        height: 4px;
-        border-radius: 2px;
-        background-color: var(--accent-color);
-        }
-    }   
-}*/
-.header-contact {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
+  position: relative;
+  color: var(--accent-color);
 }
 
-.header-contact__item:not(:first-child) {
-  margin-left: 50px;
+@media screen and (min-width: 768px) {
+  .site-nav__link--current::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+  }
+}
+
+.header-contact {
+  display: flex;
+  flex-direction: column-reverse;
+  margin-bottom: 64px;
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contact {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
+}
+
+/*.header-contact__item:not(:first-child) {
+    margin-left: 50px;
+}*/
+.header-contact__link-tel {
+  display: inline-block;
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.header-contact__link-mail {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--primery-text-color);
 }
 
 .header-contact__link-mail,
 .header-contact__link-tel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: var(--primary-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  transition: color 250ms var(--timing-function);
-}
+  /*@include centeredFlex;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
-.header-contact__link-mail:hover, .header-contact__link-mail:focus,
-.header-contact__link-tel:hover,
-.header-contact__link-tel:focus {
-  color: var(--accent-color);
+    color: var(--primary-text-color);
+    @include font(null, 500, 14px, 1.14, 0.02em);
+
+    transition: color 250ms var(--timing-function);
+
+    &:hover, &:focus { 
+        color: var(--accent-color);
+    }*/
 }
 
 .header-contact__icon-mail,
 .header-contact__icon-tel {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header-contact__icon-mail,
+  .header-contact__icon-tel {
+    margin-right: 10px;
+    fill: currentColor;
+  }
+}
+
+.social-contact {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.social-contact__item:not(:last-child) {
+  padding-right: 10px;
   margin-right: 10px;
-  fill: currentColor;
+  border-right: 1px solid var(--modal-input-color);
+}
+
+.social-contact__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
 }
 
 .hero {
