--- a/sass/layout/_header-contact.scss
+++ b/sass/layout/_header-contact.scss
@@ -1,15 +1,34 @@
 .header-contact {
-    @include centeredFlex(flex, center, null);
-    margin-left: auto;
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 64px;
+
+    @include desk {
+        @include centeredFlex(flex, center, null);
+        margin-left: auto;
+    }
 }
 
-.header-contact__item:not(:first-child) {
+/*.header-contact__item:not(:first-child) {
     margin-left: 50px;
+}*/
+.header-contact__link-tel {
+    display: inline-block;
+    margin-bottom: 32px;
+    @include font(null, 500, 34px, 1.18, 0.02em);
+    color: var(--accent-color);
 }
+
+.header-contact__link-mail {
+    display: inline-block;
+    @include font(null, 500, 24px, 1.17, 0.02em);
+    color: var(--primery-text-color);
+}
+
 
 .header-contact__link-mail,
 .header-contact__link-tel {
-    @include centeredFlex;
+    /*@include centeredFlex;
     padding-top: 32px;
     padding-bottom: 32px;
 
@@ -20,11 +39,15 @@
 
     &:hover, &:focus { 
         color: var(--accent-color);
-    }
+    }*/
 }
 
 .header-contact__icon-mail,
 .header-contact__icon-tel {
-    margin-right: 10px;
-    fill: currentColor;
+    display: none;
+
+    @include tab {
+        margin-right: 10px;
+        fill: currentColor;
+    }
 }
