--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import './layout/menu';
 @import './layout/site-nav';
 @import './layout/header-contact';
+@import './layout/social-contact';
 @import './layout/hero';
 @import './components/button';
 @import './components/modal';
