--- a/sass/layout/_site-nav.scss
+++ b/sass/layout/_site-nav.scss
@@ -1,5 +1,6 @@
 .site-nav {
     margin-bottom: 302px;
+    
     @include tab {
     @include centeredFlex(flex, center, null);
     }
@@ -18,14 +19,13 @@
     color: var(--title-text-color);
     @include font(null, 500, 40px, 1.18, 0.02em);
 
+    /*&:hover, &:focus {
+        color: var(--accent-color);*/
+
     @include tab {
         @include font(null, 500, 14px, 1.14, 0.02em);
 
         transition: color 250ms var(--timing-function);
-    }
-
-    &:hover, &:focus {
-        color: var(--accent-color);
     }
 }
 
