--- a/css/main.css
+++ b/css/main.css
@@ -168,6 +168,10 @@ body.modal-open {
   z-index: 1;
 }
 
+.menu-button:hover {
+  fill: var(--accent-color);
+}
+
 @media screen and (min-width: 768px) {
   .menu-button {
     display: none;
@@ -187,7 +191,7 @@ body.modal-open {
 }
 
 .menu-container {
-  padding: 48px 40px;
+  padding: 48px 30px;
   background-color: var(--white-color);
 }
 
