--- a/sass/layout/_header-contact.scss
+++ b/sass/layout/_header-contact.scss
@@ -3,15 +3,23 @@
     flex-direction: column-reverse;
     margin-bottom: 64px;
 
+    @include tab {
+        margin-bottom: 0;
+        margin-left: auto;
+    }
+
     @include desk {
         @include centeredFlex(flex, center, null);
         margin-left: auto;
     }
 }
 
-/*.header-contact__item:not(:first-child) {
+.header-contact__item:not(:first-child) {
+    @include desk {
     margin-left: 50px;
-}*/
+    }
+}
+
 .header-contact__link-tel {
     display: inline-block;
     margin-bottom: 32px;
@@ -28,18 +36,22 @@
 
 .header-contact__link-mail,
 .header-contact__link-tel {
-    /*@include centeredFlex;
+    @include tab {
+    @include centeredFlex;
+    flex-direction: column;
     padding-top: 32px;
     padding-bottom: 32px;
+    margin: 0;
 
     color: var(--primary-text-color);
     @include font(null, 500, 14px, 1.14, 0.02em);
 
     transition: color 250ms var(--timing-function);
 
-    &:hover, &:focus { 
-        color: var(--accent-color);
-    }*/
+        &:hover, &:focus { 
+            color: var(--accent-color);
+        }
+    }
 }
 
 .header-contact__icon-mail,
