--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -11,4 +11,9 @@
     @include centeredFlex(flex, center, space-between);
     width: 100vw;
     min-height: 60px;
+
+    @include tab {
+        width: 100%;
+        min-width: 80px;
+    }
 }
