--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -6,10 +6,6 @@
     background-color: transparent;
     z-index: 1;
 
-    &:hover {
-        fill: var(--accent-color); 
-    }
-
     @include tab {
         display: none;
     }
@@ -20,18 +16,32 @@
 
     .menu-button.is-open & {
         display: block;
+        fill: var(--black-color);
+
+        &:hover, &:focus {
+            fill: var(--accent-color); 
+        }
     }
 }
 
-.menu-button.is-open .menu-button__icon-menu {
-    display: none;
+.menu-button__icon-menu {
+    display: block;
+    fill: var(--black-color);
+
+    &:hover, &:focus {
+        fill: var(--accent-color); 
+    }
+
+    .menu-button.is-open & {
+        display: none;
+    }
 }
 
 .menu-container {
     padding: 48px 40px;
     background-color: var(--white-color);
 
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 767.5px) {
         display: none;
         position: absolute;
         top: 0;
@@ -44,8 +54,8 @@
         }
     }
 
-    @media screen and (min-width: 768px) {
+    @include tab {
         @include centeredFlex(flex, center, null);
-        margin-left: 88px;
+        padding: 0;
     }
 }
