--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,7 +1,11 @@
 .logo {
-    @include font(null, 700, 26px, 1.19, 0.03em);
+    @include font(null, 700, 24px, 1.17, 0.03em); 
     font-family: Raleway;
     color: var(--accent-color);
+    
+    @include desk {
+        @include font(null, 700, 26px, 1.19, 0.03em);
+    }
 }
 
 .logo__studio {
