--- a/sass/layout/_site-nav.scss
+++ b/sass/layout/_site-nav.scss
@@ -20,10 +20,6 @@
     display: inline-block;
     color: var(--title-text-color);
     @include font(null, 500, 40px, 1.18, 0.02em);
-
-    &:hover, &:focus {
-        color: var(--accent-color);
-    }
     
     @include tab {
         @include font(null, 500, 14px, 1.14, 0.02em);
@@ -32,11 +28,19 @@
 
         transition: color 250ms var(--timing-function);
     }
+
+    @include desk {
+        &:hover, &:focus {
+        color: var(--accent-color);
+        }
+    }
 }
 
 .site-nav__link--current {
     position: relative;
     color: var(--accent-color);
+
+    
 
     @include tab {
     &::after {
