--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,4 +17,8 @@
         width: 100%;
         min-width: 80px;
     }
+
+    @include desk {
+        @include centeredFlex(flex, center, null);
+    }
 }
