--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -4,7 +4,7 @@
     padding: 0;
     border: none;
     background-color: transparent;
-    z-index: 1;
+    z-index: 2;
 
     @include tab {
         display: none;
@@ -51,16 +51,18 @@
 
         &.is-open {
             display: block;
+            z-index: 1;
         }
     }
 
     @include tab {
         @include centeredFlex(flex, center, null);
+        width: 100%;
         padding: 0;
-        margin-left: auto;
+        margin-left: 88px;
     }
 
     @include desk {
-        
+        margin-left: 93px;
     }
 }
