--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,7 @@ body.modal-open {
 
 .container {
   min-width: 320px;
-  width: 100%;
+  width: 100vw;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
@@ -1101,13 +1101,37 @@ body.modal-open {
 
 .filters {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
-.filters__item:not(:first-child) {
-  margin-left: 8px;
+@media screen and (min-width: 768px) {
+  .filters {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .filters {
+    margin-bottom: 50px;
+  }
+}
+
+.filters__item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.filters__item:nth-child(-n+3) {
+  margin-bottom: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .filters__item:nth-child(-n+3) {
+    margin-bottom: 0;
+  }
 }
 
 .filters__button {
@@ -1134,18 +1158,33 @@ body.modal-open {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.project-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -30px;
-  margin-left: -30px;
+@media screen and (min-width: 768px) {
+  .project-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 
-.project-list__item {
-  flex-basis: 370px;
-  margin-top: 30px;
-  margin-left: 30px;
-  background-color: var(--white-color);
+@media screen and (min-width: 768px) {
+  .project-list__item {
+    flex-basis: calc((100% - 2*30px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-list__item {
+    flex-basis: calc((100% - 3*30px) / 3);
+    margin: 15px;
+    background-color: var(--white-color);
+  }
+}
+
+@media screen and (max-width: 767.5px) {
+  .project-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .product__link {
@@ -1183,10 +1222,17 @@ body.modal-open {
 }
 
 .product__meta {
+  height: 100%;
   padding: 20px 24px;
   border-right: 1px solid var(--border-project-color);
   border-bottom: 1px solid var(--border-project-color);
   border-left: 1px solid var(--border-project-color);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+  .project-list__item:first-child .product__meta {
+    padding-bottom: 56px;
+  }
 }
 
 .product__name {
