--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,6 +1,6 @@
 .container {
     min-width: 320px;
-    width: 100%;
+    width: 100vw;
     padding-left: 15px;
     padding-right: 15px;
     margin-right: auto;
