--- a/sass/components/_product.scss
+++ b/sass/components/_product.scss
@@ -37,10 +37,17 @@
 }
 
 .product__meta {
+    height: 100%;
     padding: 20px 24px;
     border-right: 1px solid var(--border-project-color);
     border-bottom: 1px solid var(--border-project-color);
     border-left: 1px solid var(--border-project-color);
+}
+
+@media screen and (min-width:768px) and (max-width:1199.5px) {
+    .project-list__item:first-child .product__meta {
+        padding-bottom: 56px;
+    }
 }
 
 .product__name {
