--- a/sass/layout/_filters.scss
+++ b/sass/layout/_filters.scss
@@ -1,11 +1,30 @@
 .filters {
-    @include centeredFlex;
-    margin-bottom: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+
+    @include tab {
+        @include centeredFlex();
+        margin-bottom: 30px;
+    }
+
+    @include desk {
+        margin-bottom: 50px;
+    }
 }
 
-.filters__item:not(:first-child) {
-    margin-left: 8px;
+.filters__item:not(:last-child) {
+    margin-right: 8px;
 }
+
+.filters__item:nth-child(-n+3) {
+    margin-bottom: 15px;
+
+    @include tab {
+        margin-bottom: 0;
+    }
+}
+
 
 .filters__button {
     display: inline-block;
