--- a/sass/layout/_project-list.scss
+++ b/sass/layout/_project-list.scss
@@ -1,13 +1,27 @@
 .project-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: -30px;
-    margin-left: -30px;
+    @include tab {
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
 }
 
 .project-list__item {
-    flex-basis: (1200px / 3) - 30px;
-    margin-top: 30px;
-    margin-left: 30px;
-    background-color: var(--white-color);
+    @include tab { 
+        flex-basis: calc((100% - 2*30px) / 2);
+        margin: 15px;
+    }
+    
+    @include desk {
+        flex-basis: calc((100% - 3*30px) / 3);
+        margin: 15px;
+        background-color: var(--white-color);
+    }
+}
+
+@media screen and (max-width: 767.5px) {
+
+    .project-list__item:not(:last-child) {
+        margin-bottom: 30px;
+    }
 }
