--- a/sass/layout/_menu.scss
+++ b/sass/layout/_menu.scss
@@ -20,6 +20,10 @@
 
         &:hover, &:focus {
             fill: var(--accent-color); 
+
+            .site-nav__link--current {
+                color: var(--title-text-color);
+            }
         }
     }
 }
