--- a/sass/components/_product.scss
+++ b/sass/components/_product.scss
@@ -42,11 +42,11 @@
     border-right: 1px solid var(--border-project-color);
     border-bottom: 1px solid var(--border-project-color);
     border-left: 1px solid var(--border-project-color);
-}
 
-@media screen and (min-width:768px) and (max-width:1199.5px) {
-    .project-list__item:first-child .product__meta {
-        padding-bottom: 56px;
+    @media screen and (min-width:768px) and (max-width:1199.5px) {
+        .project-list__item:first-child & {
+            padding-bottom: 56px;
+        }
     }
 }
 
