--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,24 +1,34 @@
 .hero {
+    max-width: 480px;
     height: 400px;
     padding-top: 118px;
     padding-bottom: 118px;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; 
+    text-align: center;
 
     background-color: var(--background-color-hero);  
     background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), 
-    url(../images/hero.jpg);
+    url(../images/hero-mobile.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    text-align: center;
 
-    @include mob {
-        max-width: 480px;
-    }
+
+    @include retina {
+            background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), 
+            url(../images/hero-mobile2x.jpg);
+        }
 
     @include tab {
         max-width: 768px;
+        background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), 
+    url(../images/hero-tab.jpg);
+
+        @include retina {
+            background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), 
+    url(../images/hero-tab2x.jpg);
+        }
     }
 
     @include desk {
@@ -26,6 +36,14 @@
         height: 600px;
         padding-top: 200px;
         padding-bottom: 200px;
+
+        background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), 
+    url(../images/hero.jpg);
+
+        @include retina {
+            background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), 
+    url(../images/hero2x.jpg);
+        }
     }
 }
 
