Выполняет адаптивную верстку

--- a/css/main.css
+++ b/css/main.css
@@ -508,7 +508,7 @@ body.modal-open {
   margin-right: auto;
   text-align: center;
   background-color: var(--background-color-hero);
-  background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), url(../images/hero-mobile.jpg);
+  background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), url(../images/hero-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -516,7 +516,7 @@ body.modal-open {
 
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), url(../images/hero-mobile2x.jpg);
+    background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), url(../images/hero-mob2x.jpg);
   }
 }
 
